# YarpLibCarl

./: CMakeLists.txt  README.md
libYARP_carl/: CMakeLists.txt
libYARP_carl/harness/: MatrixTest.cpp.txt  TestList.h  TimestampTest.cpp  harness.cpp
libYARP_carl/src/: CMakeLists.txt
libYARP_carl/src/yarp/carl/: AceUtils.cpp  AceUtils.h  BottleDecoder.cpp  BottleDecoder.h  BottleEncoder.cpp  BottleEncoder.h  Dummy.cpp  StlUtils.cpp  StlUtils.h  all.h  api.h
